# onadoc-extractor-html

./: .gitignore  LICENSE  README.md  TODO  pyproject.toml  requirements.txt
onadoc_extractor_html/: __about__.py  __init__.py  app.py  collected.py  collectors.py  data.py  mutate_dissimilar_children.py  mutate_duplicates.py  mutate_junk_nodes.py  mutate_link_blocks.py  mutate_strip_attributes.py  readability.py
src/onadoc_extractor_html/: collected.py  collector.py  dump.py  facts.py  find_best.py  flatten.py  mutate_detect_duplicates.py  mutate_dissimilar_children.py  mutate_duplicates.py  mutate_hidden.py  mutate_junk_nodes.py  mutate_strip_attributes.py
tests/: _boilerpy3.py  _goose3.py  _newspaper.py
tests/data/: arstechnica.com.html  cnbc.com.html  cnn.com.html  cp24.com.html  digitalocean.com-wireguard.html  financialpost.com.html  globe.html  grapevine.is.html  hackaday.com.html  montreal.ctvnews.ca.html  nationalpost.com.html  nytimes.com.html  rt.com.html  substack.html  techcrunch.com.html  theatlantic.com.html  theguardian.com.html  time.com.html  timesnownews.com.html  vice.com.html
tests/data/in/: bbc.com.html  cbc.ca.html  dailymail.co.uk.html  edition.cnn.com.html  eff.org.html  engadget.com.html  france24.com.html  globalnews.ca.html  news.trust.org.html  telegraph-sussex.html  telegraph.co.uk.html  theglobeandmail.com.html  torontosun.com-kinsella.html
